--- a/src/com/fashionapp/views/BrandProductInfo.mxml
+++ b/src/com/fashionapp/views/BrandProductInfo.mxml
@@ -11,10 +11,24 @@
 		<![CDATA[
 			import assets.images.CustomViewWithBackButtonAndSubTitleSkin;
 			
+			import com.fashionapp.utils.BasicUtil;
+			
 			import mx.events.FlexEvent;
 			[Embed(source="assets/images/openmenulogo.jpg")]
 			[Bindable]
 			private var OPEN_MENU_LOGO:Class;
+			
+			[Embed(source="assets/images/backarrow.png")]
+			[Bindable]
+			private var BACK_ARROW:Class;
+			
+			[Embed(source="assets/images/nextarrow.png")]
+			[Bindable]
+			private var NEXT_ARROW:Class;
+			
+			[Embed(source="assets/images/crop.png")]
+			[Bindable]
+			private var CROP:Class;
 			
 			protected function view1_creationCompleteHandler(event:FlexEvent):void
 			{
@@ -32,43 +46,79 @@
 	<s:Group width="100%" height="100%">
 		<s:layout>
 			<s:VerticalLayout gap="0" 
-							  paddingLeft="15" paddingRight="15"/>
+							  paddingLeft="{BasicUtil.getComponentPadding(30)}" paddingRight="{BasicUtil.getComponentPadding(30)}"/>
 		</s:layout>
 		
 		<s:VGroup height="50%" width="100%" horizontalAlign="center"
 				  verticalAlign="middle"
 				  gap="0">
-			<s:Image source="{OPEN_MENU_LOGO}" 
-					 height="70%" width="45%"
-					 horizontalCenter="0"
-					 verticalCenter="0"/>
-			<s:TextInput width="100%" height="40" skinClass="com.fashionapp.skins.ImageNameTextInputSkin"
+			<s:HGroup width="100%" verticalAlign="middle">
+				<s:Image source="{BACK_ARROW}" height="{BasicUtil.getComponentHeight(30)}"
+										width="{BasicUtil.getComponentHeight(17)}"
+										smooth="true"
+										scaleMode="stretch"/>
+				<s:Spacer width="100%"/>
+				<s:Image source="{OPEN_MENU_LOGO}" 
+						 height="{BasicUtil.getComponentHeight(280)}" width="{BasicUtil.getComponentHeight(230)}"
+						 horizontalCenter="0"
+						 verticalCenter="0"/>
+				<s:Spacer width="100%"/>
+				<s:Group height="100%">
+					<s:Image verticalCenter="0" horizontalCenter="0"
+							 source="{NEXT_ARROW}" height="{BasicUtil.getComponentHeight(30)}"
+							 width="{BasicUtil.getComponentHeight(17)}"
+							 smooth="true"
+							 scaleMode="stretch"/>
+					<s:Image bottom="5" horizontalCenter="0"
+							 source="{CROP}" height="{BasicUtil.getComponentHeight(45)}"
+							 width="{BasicUtil.getComponentHeight(45)}"
+							 smooth="true"
+							 scaleMode="stretch"/>
+				</s:Group>
+			</s:HGroup>
+			<s:TextInput width="100%" height="{BasicUtil.getComponentHeight(80)}" skinClass="com.fashionapp.skins.ImageNameTextInputSkin"
 						 text="IMG_0123.png" textAlign="center"
-						 fontSize="10"
-						 focusAlpha="0"/>
+						 focusAlpha="0"
+						 styleName="viewheader" fontSize="{BasicUtil.getFontSize(26)}"/>
 		</s:VGroup>
 		<s:BorderContainer width="100%" height="1" borderVisible="false" backgroundColor="0xCCCCCC"/>
 		<s:HGroup width="100%" verticalAlign="middle">
-			<s:Label text="CAPTION" fontSize="10" width="65"/>
-			<s:TextInput skinClass="com.fashionapp.skins.ImageNameTextInputSkin" width="100%" fontSize="10" fontWeight="bold" text="Puffy Cost"
-						 height="40"/>
+			<s:Label text="CAPTION" width="{BasicUtil.getComponentHeight(130)}"
+					 styleName="viewheader"
+					 fontSize="{BasicUtil.getFontSize(21)}"/>
+			<s:TextInput skinClass="com.fashionapp.skins.ImageNameTextInputSkin" width="100%" text="Puffy Cost"
+						 height="{BasicUtil.getComponentHeight(80)}"
+						 styleName="viewheader"
+						 fontSize="{BasicUtil.getFontSize(26)}"/>
 		</s:HGroup>
 		<s:BorderContainer width="100%" height="1" borderVisible="false" backgroundColor="0xCCCCCC"/>
 		<s:HGroup width="100%" verticalAlign="middle">
-			<s:Label text="PRICE" fontSize="10" width="65"/>
-			<s:TextInput skinClass="com.fashionapp.skins.ImageNameTextInputSkin" width="100%" fontSize="10" fontWeight="bold" text="HDK 200,000"
-						 height="40"/>
+			<s:Label text="PRICE" width="{BasicUtil.getComponentHeight(130)}"
+					 styleName="viewheader"
+					 fontSize="{BasicUtil.getFontSize(21)}"/>
+			<s:TextInput skinClass="com.fashionapp.skins.ImageNameTextInputSkin" width="100%" text="HDK 200,000"
+						 height="{BasicUtil.getComponentHeight(80)}"
+						 styleName="viewheader"
+						 fontSize="{BasicUtil.getFontSize(26)}"/>
 		</s:HGroup>
 		<s:BorderContainer width="100%" height="1" borderVisible="false" backgroundColor="0xCCCCCC"/>
 		<s:HGroup width="100%" verticalAlign="middle">
-			<s:Label text="REMARKS" fontSize="10" width="65"/>
-			<s:TextInput skinClass="com.fashionapp.skins.ImageNameTextInputSkin" width="100%" fontSize="10" fontWeight="bold" text="Sample Remarks"
-						 height="40"/>
+			<s:Label text="REMARKS" width="{BasicUtil.getComponentHeight(130)}"
+					 styleName="viewheader"
+					 fontSize="{BasicUtil.getFontSize(21)}"/>
+			<s:TextInput skinClass="com.fashionapp.skins.ImageNameTextInputSkin" width="100%" text="Sample Remarks"
+						 height="{BasicUtil.getComponentHeight(80)}"
+						 styleName="viewheader"
+						 fontSize="{BasicUtil.getFontSize(26)}"/>
 		</s:HGroup>
 		<s:HGroup width="100%" verticalAlign="middle">
-			<s:Label text="GROUPS" fontSize="10" width="65"/>
-			<s:TextInput skinClass="com.fashionapp.skins.ImageNameTextInputSkin" width="100%" fontSize="10" fontWeight="bold" text="RTV"
-						 height="40"/>
+			<s:Label text="GROUPS" width="{BasicUtil.getComponentHeight(130)}"
+					 styleName="viewheader"
+					 fontSize="{BasicUtil.getFontSize(21)}"/>
+			<s:TextInput skinClass="com.fashionapp.skins.ImageNameTextInputSkin" width="100%" text="RTV"
+						 height="{BasicUtil.getComponentHeight(80)}"
+						 styleName="viewheader"
+						 fontSize="{BasicUtil.getFontSize(26)}"/>
 		</s:HGroup>
 		<s:BorderContainer width="100%" height="1" borderVisible="false" backgroundColor="0xCCCCCC"/>	
 	</s:Group>
