--- a/src/assets/images/CustomViewWithBackButtonSkin.mxml
+++ b/src/assets/images/CustomViewWithBackButtonSkin.mxml
@@ -27,6 +27,8 @@
 
     <fx:Script fb:purpose="styling">
         <![CDATA[         
+			import com.fashionapp.utils.BasicUtil;
+			
 			import spark.components.View;
             /**
              *  @private
@@ -80,21 +82,27 @@
 		<s:layout>
 			<s:VerticalLayout gap="0"/>
 		</s:layout>
-		<s:BorderContainer borderVisible="false" height="60" width="100%"
+		<s:BorderContainer borderVisible="false" height="{BasicUtil.getComponentHeight(60)}" width="100%"
 						   backgroundColor="0xffffff">
 			<s:Label width="100%" text="{this.hostComponent.title}"
 					 verticalCenter="0" textAlign="center"
-					 paddingLeft="50" paddingRight="50" maxDisplayedLines="1"/>
-			<s:Image source="{BACK_ARROW}" scaleX="0.5" scaleY="0.5" scaleZ="0.5" verticalCenter="0"
+					 paddingLeft="{BasicUtil.getComponentPadding(100)}" 
+					 paddingRight="{BasicUtil.getComponentPadding(100)}" 
+					 maxDisplayedLines="1"
+					 styleName="viewtext"
+					 fontSize="{BasicUtil.getFontSize(36)}"/>
+			<s:Image source="{BACK_ARROW}" scaleMode="stretch" height="{BasicUtil.getComponentHeight(30)}" width="{BasicUtil.getComponentHeight(17)}"
+					 verticalCenter="0"
 					 click="{(this.hostComponent as View).navigator.popView()}"
-					 left="15"/>
+					 left="10"
+					 smooth="true"/>
 		</s:BorderContainer>
 		<s:Group id="contentGroup" height="100%" width="100%" minWidth="0" minHeight="0">
 			<s:layout>
 				<s:BasicLayout/>
 			</s:layout>
 		</s:Group>
-		<s:Image scaleMode="stretch" height="35" smooth="true" source="{FOOTER_BG}" width="100%"/>
+		<s:Image scaleMode="stretch" height="{BasicUtil.getComponentHeight(70)}" smooth="true" source="{FOOTER_BG}" width="100%"/>
 	</s:Group>
     <!--- @copy spark.components.SkinnableContainer#contentGroup -->
 </s:Skin>
