--- a/src/com/fashionapp/renderers/FromMessageRenderer.mxml
+++ b/src/com/fashionapp/renderers/FromMessageRenderer.mxml
@@ -6,6 +6,7 @@
 	
 	<fx:Script>
 		<![CDATA[
+			import com.fashionapp.utils.BasicUtil;
 			protected function group1_clickHandler(event:MouseEvent):void
 			{
 				chatActions.visible = !chatActions.visible;
@@ -24,19 +25,24 @@
 							   backgroundColor="0xCCCCCC"/>-->
 			<s:Group width="100%" height="100%">
 				<s:layout>
-					<s:VerticalLayout paddingTop="10"
-									  paddingBottom="10"/>
+					<s:VerticalLayout paddingTop="{BasicUtil.getComponentPadding(20)}"
+									  paddingBottom="{BasicUtil.getComponentPadding(20)}"/>
 				</s:layout>
 				<s:HGroup verticalAlign="middle">
-					<s:Label text="AMIT"/>
-					<s:Label text="2:07 PM" fontSize="10"/>	
+					<s:Label text="AMIT"
+							 styleName="viewheading"
+							 fontWeight="bold"
+							 fontSize="{BasicUtil.getFontSize(21)}"/>
+					<s:Label text="2:07 PM" fontSize="{BasicUtil.getFontSize(18)}"
+							 styleName="viewheading"/>	
 				</s:HGroup>
 				<s:RichText width="100%" text="Hello World To"
-							fontSize="11"/>
+							fontSize="{BasicUtil.getFontSize(30)}"
+							styleName="viewheading"/>
 			</s:Group>
 		</s:Group>
 	</s:BorderContainer>
-	<components:ChatMessageActionsMenu top="0" right="15" 
+	<components:ChatMessageActionsMenu top="0" right="{BasicUtil.getComponentHeight(30)}" 
 									   id="chatActions"
 									   visible="false"/>
 </s:Group>
