--- a/src/com/fashionapp/renderers/ToMessageRenderer.mxml
+++ b/src/com/fashionapp/renderers/ToMessageRenderer.mxml
@@ -5,6 +5,7 @@
 				   click="group1_clickHandler(event)" xmlns:components="com.fashionapp.views.components.*">
 	<fx:Script>
 		<![CDATA[
+			import com.fashionapp.utils.BasicUtil;
 			protected function group1_clickHandler(event:MouseEvent):void
 			{
 				chatActions.visible = !chatActions.visible;
@@ -15,26 +16,31 @@
 					   height="100%">
 		<s:Group height="100%" width="100%">
 			<s:layout>
-				<s:HorizontalLayout verticalAlign="middle" paddingLeft="80"/>
+				<s:HorizontalLayout verticalAlign="middle" paddingLeft="{BasicUtil.getComponentPadding(160)}"/>
 			</s:layout>
 			<s:BorderContainer height="100%" width="2" 
 							   borderVisible="false"
 							   backgroundColor="0xCCCCCC"/>
 			<s:Group width="100%" height="100%">
 				<s:layout>
-					<s:VerticalLayout paddingTop="10"
-									  paddingBottom="10"/>
+					<s:VerticalLayout  paddingTop="{BasicUtil.getComponentPadding(20)}"
+									   paddingBottom="{BasicUtil.getComponentPadding(20)}"/>
 				</s:layout>
 				<s:HGroup verticalAlign="middle">
-					<s:Label text="ME"/>
-					<s:Label text="2:07 PM" fontSize="10"/>	
+					<s:Label text="ME"
+							 styleName="viewheading"
+							 fontWeight="bold"
+							 fontSize="{BasicUtil.getFontSize(21)}"/>
+					<s:Label text="2:07 PM" fontSize="{BasicUtil.getFontSize(18)}"
+							 styleName="viewheading"/>	
 				</s:HGroup>
 				<s:RichText width="100%" text="Hello World To"
-							fontSize="11"/>
+							fontSize="{BasicUtil.getFontSize(30)}"
+							styleName="viewheading"/>
 			</s:Group>
 		</s:Group>
 	</s:BorderContainer>
-	<components:ChatMessageActionsMenu top="0" right="15" 
+	<components:ChatMessageActionsMenu top="0" right="{BasicUtil.getComponentHeight(30)}"
 									   id="chatActions"
 									   visible="false"/>
 </s:Group>
