--- a/src/com/fashionapp/skins/LoginButtonSkin.mxml
+++ b/src/com/fashionapp/skins/LoginButtonSkin.mxml
@@ -37,6 +37,7 @@
     
     <fx:Script fb:purpose="styling">
         <![CDATA[         
+			import com.fashionapp.utils.BasicUtil;
 			[Embed(source="assets/images/loginbuttonbg.png")]
 			[Bindable]
 			private var BUTTON_BG:Class;
@@ -223,7 +224,6 @@
              horizontalCenter="0" verticalCenter="1" verticalAlign="middle"
              left="10" right="10" top="2" bottom="2"
 			 textAlign="center"
-			 fontSize="14"
 			 color="0xffffff">
     </s:Label>
     
