--- a/src/com/fashionapp/skins/TopTabButtonSkin.mxml
+++ b/src/com/fashionapp/skins/TopTabButtonSkin.mxml
@@ -38,13 +38,15 @@
     
     <fx:Script fb:purpose="styling">
         <![CDATA[         
+			import com.fashionapp.utils.BasicUtil;
+			
 			import mx.events.FlexEvent;
 			import mx.events.StateChangeEvent;
 			
 			import spark.components.Group;
             /* Define the skin elements that should not be colorized. 
             For button, the graphics are colorized but the label is not. */
-            static private const exclusions:Array = ["labelDisplay"];
+            static private const exclusions:Array = [];
             
             /** 
              * @private
@@ -237,17 +239,22 @@
     <!--- @copy spark.components.supportClasses.ButtonBase#labelDisplay  -->
 	<s:HGroup height="100%" width="100%"
 			  verticalAlign="middle"
-			  paddingLeft="10" paddingRight="10"
+			  paddingLeft="{BasicUtil.getComponentPadding(20)}" paddingRight="{BasicUtil.getComponentPadding(20)}"
 			  color="{currentState == 'down'?0xFFFFFF:0x000000}">
-		<s:Image id="iconImage" scaleX="0.5" scaleY="0.5" scaleZ="0.5"/>
+		<s:Image id="iconImage" height="{BasicUtil.getComponentHeight(28)}" 
+				 width="{BasicUtil.getComponentHeight(30)}"
+				 scaleMode="stretch"
+				 smooth="true"
+				 verticalAlign="middle"
+				 horizontalAlign="center"/>
 		<s:Label id="labelDisplay"
-				 fontStyle="italic"
-				 textAlign="center"
 				 maxDisplayedLines="1"
 				 verticalAlign="middle" 
 				 paddingTop="10"
 				 paddingBottom="10"
-				 height="100%" width="100%">	
+				 height="100%" width="100%"
+				 styleName="viewtextitalic">	
 		</s:Label>
+		<!--<s:TextInput text="Asim" styleName="viewtext"/>-->
 	</s:HGroup>
 </s:SparkButtonSkin>
