--- a/src/com/fashionapp/views/HomeView.mxml
+++ b/src/com/fashionapp/views/HomeView.mxml
@@ -1,17 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:View xmlns:fx="http://ns.adobe.com/mxml/2009" 
-		xmlns:s="library://ns.adobe.com/flex/spark" title="Home"
+		xmlns:s="library://ns.adobe.com/flex/spark" title="{resourceManager.getString('resources','hometitle')}"
 		skinClass="assets.images.CustomViewSkin"
-		actionBarVisible="false">
+		actionBarVisible="false" xmlns:views="com.fashionapp.views.*">
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
 	<fx:Script>
 		<![CDATA[
+			import assets.images.CustomViewSkin;
+			
+			import com.fashionapp.utils.BasicUtil;
 			
 			protected function image1_clickHandler(event:MouseEvent):void
 			{
-				navigator.pushView(MainMenuView);
+				//navigator.pushView(MainMenuView);
+				(this.skin as CustomViewSkin).openMenu();
 			}
 			
 			[Embed(source="assets/images/openmenulogo.jpg")]
@@ -23,8 +27,8 @@
 	<s:BorderContainer width="100%" height="1" 
 					   top="0"
 					   backgroundColor="0x000000" borderVisible="false"/>
-	<s:Image height="130"
-			 width="90%"
+	<s:Image height="{BasicUtil.getComponentHeight(260)}"
+			 width="{BasicUtil.getComponentHeight(600)}"
 			 horizontalCenter="0"
 			 verticalCenter="0"
 			 click="image1_clickHandler(event)"
