--- a/src/com/fashionapp/views/ReservedProductsDetailView.mxml
+++ b/src/com/fashionapp/views/ReservedProductsDetailView.mxml
@@ -2,14 +2,19 @@
 <s:View xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		xmlns:s="library://ns.adobe.com/flex/spark"
 		actionBarVisible="false"
-		title="Reserved Products"
+		title="{resourceManager.getString('resources','reservedproducts')}"
 		skinClass="assets.images.CustomViewWithBackButtonSkin" xmlns:skins="com.fashionapp.skins.*"
 		creationComplete="view1_creationCompleteHandler(event)">
 	<fx:Script>
 		<![CDATA[
+			import com.fashionapp.utils.BasicUtil;
+			
 			import mx.collections.ArrayCollection;
 			import mx.events.FlexEvent;
 			
+			[Embed(source="assets/images/sampleproduct.jpg")]
+			[Bindable]
+			private var PROD:Class;
 			
 			protected function view1_creationCompleteHandler(event:FlexEvent):void
 			{
@@ -27,40 +32,61 @@
 		<s:layout>
 			<s:VerticalLayout gap="0"/>
 		</s:layout>
-		<skins:SearchOpenerSkin height="50" width="100%" click="{list_searchOptions.visible = !list_searchOptions.visible}"/>
+		<skins:SearchOpenerSkin height="{BasicUtil.getComponentHeight(100)}" width="100%" click="{list_searchOptions.visible = !list_searchOptions.visible}"/>
 		<s:Group width="100%">
-			<s:HGroup width="100%" paddingRight="15"
+			<s:HGroup width="100%" paddingRight="{BasicUtil.getComponentPadding(30)}"
 					  verticalAlign="middle"
-					  paddingLeft="15">
-				<s:Image height="60" width="60"/>
-				<s:VGroup width="100%" gap="2">
-					<s:Label text="Brand" 
-							 fontSize="14" fontWeight="bold"
-							 paddingTop="20" width="100%"/>
-					<s:HGroup width="100%" gap="2">
-						<s:Label text="Session" 
-								 fontSize="14" fontWeight="bold"
-								 />
-						<s:Label text="{'| '+'Dept'}" fontWeight="bold"
-								 fontSize="14"
-								 />
-					</s:HGroup>
-					<s:Label text="Product Name 01" 
-							 fontSize="14" fontWeight="bold"
+					  paddingLeft="{BasicUtil.getComponentPadding(30)}"
+					  paddingBottom="{BasicUtil.getComponentPadding(40)}">
+				<s:Image height="{BasicUtil.getComponentHeight(110)}" width="{BasicUtil.getComponentHeight(110)}" 
+						 scaleMode="stretch" source="{PROD}"/>
+				<s:Spacer width="{BasicUtil.getComponentPadding(30)}"/>
+				<s:VGroup width="100%" gap="{BasicUtil.getComponentPadding(4)}"
+						  paddingTop="{BasicUtil.getComponentPadding(40)}">
+					<s:Label text="FALL 2015 | WOMEN" 
+							 styleName="viewtext"
+							 fontSize="{BasicUtil.getFontSize(18)}"
 							 width="100%"/>
-					<s:Label text="Total Reserved Quantity" 
-							 fontSize="12"
-							 paddingTop="20" paddingBottom="5" width="100%"/>
-					<s:Label text="PO Quantity" 
-							 fontSize="12"
-							 paddingBottom="0" width="100%"/>
+					<s:Label text="Brand Name" 
+							 styleName="viewheading"
+							 fontWeight="bold"
+							 fontSize="{BasicUtil.getFontSize(28)}"
+							 width="100%"/>
+					<s:Label text="DESCRIPTION" 
+							 styleName="viewheading"
+							 fontSize="{BasicUtil.getFontSize(21)}"
+							 width="100%"/>
+					<s:Spacer height="{BasicUtil.getComponentPadding(10)}"/>
+					<s:Label text="SKU 0000122001"
+							 styleName="viewheading"
+							 fontSize="{BasicUtil.getFontSize(19)}"/>
+					<s:Spacer height="{BasicUtil.getComponentPadding(10)}"/>
+					<s:HGroup width="100%" gap="{BasicUtil.getComponentPadding(20)}">
+						<s:VGroup>
+							<s:Label text="Total Reserved Quantity" 
+									 styleName="viewtextitalic"
+									 fontSize="{BasicUtil.getFontSize(21)}"/>
+							<s:Label text="40"
+									 styleName="viewtext"
+									 fontSize="{BasicUtil.getFontSize(25)}"/>
+						</s:VGroup>
+						<s:VGroup>
+							<s:Label text="Total Ordered Quantity" styleName="viewtextitalic"
+									 fontSize="{BasicUtil.getFontSize(21)}"/>
+							<s:Label text="38"
+									 styleName="viewtext"
+									 fontSize="{BasicUtil.getFontSize(25)}"/>
+						</s:VGroup>
+						
+					</s:HGroup>
 				</s:VGroup>
-			</s:HGroup>	
+			</s:HGroup>
 			<s:Group width="100%" id="list_searchOptions" visible="false"
-					 height="100">
+					 height="{BasicUtil.getComponentHeight(200)}">
 				<s:List skinClass="com.fashionapp.skins.MenuListSkin" width="100%"
 						selectedIndex="0"
-						height="100">
+						itemRenderer="com.fashionapp.views.components.ListItemRendererWithSep"
+						height="{BasicUtil.getComponentHeight(200)}">
 					<s:dataProvider>
 						<s:ArrayList>
 							<fx:String>BY VIP</fx:String>
