--- a/src/com/fashionapp/views/ReservedProductsView.mxml
+++ b/src/com/fashionapp/views/ReservedProductsView.mxml
@@ -2,10 +2,12 @@
 <s:View xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		xmlns:s="library://ns.adobe.com/flex/spark"
 		actionBarVisible="false"
-		title="Reserved Products"
+		title="{resourceManager.getString('resources','reservedproducts')}"
 		skinClass="assets.images.CustomViewSkin" xmlns:skins="com.fashionapp.skins.*">
 	<fx:Script>
 		<![CDATA[
+			import com.fashionapp.utils.BasicUtil;
+			
 			import mx.collections.ArrayCollection;
 			
 			
@@ -19,7 +21,7 @@
 		<s:layout>
 			<s:VerticalLayout gap="0"/>
 		</s:layout>
-		<skins:SearchOpenerSkin height="50" width="100%" click="{list_searchOptions.visible = !list_searchOptions.visible}"/>
+		<skins:SearchOpenerSkin height="{BasicUtil.getComponentHeight(100)}" width="100%" click="{list_searchOptions.visible = !list_searchOptions.visible}"/>
 		<s:Group width="100%" height="100%">
 			<s:List id="menuList" width="100%" height="100%" change="onItemSelect()"
 					skinClass="com.fashionapp.skins.ReservedListSkin">
@@ -41,7 +43,8 @@
 					 height="100">
 				<s:List skinClass="com.fashionapp.skins.MenuListSkin" width="100%"
 						selectedIndex="0"
-						height="100">
+						itemRenderer="com.fashionapp.views.components.ListItemRendererWithSep"
+						height="{BasicUtil.getComponentHeight(200)}">
 					<s:dataProvider>
 						<s:ArrayList>
 							<fx:String>BY VIP</fx:String>
