--- a/src/com/fashionapp/views/TakeNewPhotoView.mxml
+++ b/src/com/fashionapp/views/TakeNewPhotoView.mxml
@@ -31,10 +31,11 @@
 		<!--<s:HGroup horizontalAlign="center" verticalAlign="middle"
 				  height="100%" width="100%">-->
 			<!--<s:Label text="OK" color="0xFFFFFF" paddingLeft="5" paddingRight="1" width="100%" textAlign="center" fontSize="11"/>-->
-			<s:Label text="CANCEL" color="0xFFFFFF" textAlign="center" fontSize="11"
+			<s:Label text="{resourceManager.getString('resources','cancel')}" color="0xFFFFFF" textAlign="center" fontSize="11"
 					 verticalCenter="0" left="15"/>
 			<s:Image source="{CAPTURE_IMAGE}"
 					 horizontalCenter="0" verticalCenter="0"
+					 click="{navigator.pushView(TakePhotoView);}"
 					 scaleX="0.5" scaleY="0.5" scaleZ="0.5"/>
 			<!--<s:Label text="TAKE ANOTHER" maxDisplayedLines="2" color="0xFFFFFF" paddingLeft="0" paddingRight="5" width="100%" textAlign="center" fontSize="11"/>
 			<s:Label text="INPUT INFO" maxDisplayedLines="2" color="0xFFFFFF" paddingLeft="0" paddingRight="5" width="100%" textAlign="center" fontSize="11"/>-->
