--- a/src/com/fashionapp/views/components/NewBrand.mxml
+++ b/src/com/fashionapp/views/components/NewBrand.mxml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:View xmlns:fx="http://ns.adobe.com/mxml/2009" 
 			   xmlns:s="library://ns.adobe.com/flex/spark" 
-			   title="CREATE NEW BRAND" width="100%" height="100%" 
+			   title="NEW BRAND" width="100%" height="100%" 
 			   skinClass="assets.images.CustomViewWithBackButtonSkin"
 			   actionBarVisible="false"
 			   creationComplete="view1_creationCompleteHandler(event)">
 	<fx:Script>
 		<![CDATA[
+			import com.fashionapp.utils.BasicUtil;
+			
 			import mx.events.FlexEvent;
 			import mx.managers.PopUpManager;
 			
@@ -25,18 +27,29 @@
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
 	<s:layout>
-		<s:VerticalLayout gap="10" horizontalAlign="center" verticalAlign="middle"
-						  paddingLeft="15" paddingRight="15"/>
+		<s:VerticalLayout gap="{BasicUtil.getComponentPadding(20)}" horizontalAlign="center" verticalAlign="middle"
+						  paddingLeft="{BasicUtil.getComponentPadding(30)}" 
+						  paddingRight="{BasicUtil.getComponentPadding(30)}"/>
 	</s:layout>
-	<s:Label text="Brand" fontSize="11"/>
-	<s:TextInput skinClass="com.fashionapp.skins.LoginTextInputSkin" width="100%"/>
-	<s:Label text="Session" fontSize="11"/>
-	<s:TextInput skinClass="com.fashionapp.skins.LoginTextInputSkin" width="100%"/>
-	<s:Label text="Dept" fontSize="11"/>
-	<s:TextInput skinClass="com.fashionapp.skins.LoginTextInputSkin" width="100%"/>
-	<s:Spacer height="20"/>
+	<s:Label text="Brand" fontSize="{BasicUtil.getFontSize(21)}" styleName="viewtext"/>
+	<s:TextInput skinClass="com.fashionapp.skins.LoginTextInputSkin" width="100%" styleName="viewtext"
+				 fontSize="{BasicUtil.getFontSize(26)}"
+				 height="{BasicUtil.getComponentHeight(60)}"/>
+	<s:Label text="Session"  fontSize="{BasicUtil.getFontSize(21)}" styleName="viewtext"/>
+	<s:TextInput skinClass="com.fashionapp.skins.LoginTextInputSkin" width="100%"
+				 styleName="viewtext"
+				 fontSize="{BasicUtil.getFontSize(26)}"
+				 height="{BasicUtil.getComponentHeight(60)}"/>
+	<s:Label text="Dept" fontSize="{BasicUtil.getFontSize(21)}" styleName="viewtext"/>
+	<s:TextInput skinClass="com.fashionapp.skins.LoginTextInputSkin" width="100%"
+				 styleName="viewtext"
+				 fontSize="{BasicUtil.getFontSize(26)}"
+				 height="{BasicUtil.getComponentHeight(60)}"/>
+	<s:Spacer height="{BasicUtil.getComponentPadding(40)}"/>
 	<s:Button width="100%" label="Create" 
 			  horizontalCenter="0"
-			  height="40"
+			  height="{BasicUtil.getComponentHeight(60)}"
+			  fontSize="{BasicUtil.getFontSize(30)}"
+			  styleName="viewtext"
 			  skinClass="com.fashionapp.skins.LoginButtonSkin"/>
 </s:View>
